spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__zeroextending_to_shorter_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> uint<4> {
    let a: uint<8> = 0;
    let b: uint<4> = std::num::zext(a);
    b
}


error: Expected M >= 8 but M is 4 
  ┌─ testinput:3:22
  │
3 │     let b: uint<4> = std::num::zext(a);
  │                      ^^^^^^^^^^^^^^^^^ Expected M >= 8, but M is 4
  │
  = note: Zero-extend result must be wider than the input value
